src/objects/Tier1__mdt.object
<CustomObject><fields>
        <fullName>Margin__c</fullName>
        <inlineHelpText>Enter Margin Value</inlineHelpText>
        <label>Margin</label>
        <precision>18</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>X0_to_10__c</fullName>
        <label>0-10%</label>
        <precision>18</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>X10_to_20__c</fullName>
        <label>10.01-20%</label>
        <precision>18</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>X20_to_30__c</fullName>
        <label>20.01-30%</label>
        <precision>18</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Number</type>
    </fields><description>show the Tier 1 pricing table if the Premier Partner checkbox on the Partner is NOT checked.</description><label>Tier 1</label><pluralLabel>Tier 1</pluralLabel><visibility>Public</visibility><listViews>
        <fullName>Tier_1_Data</fullName>
        <columns>Margin__c</columns>
        <columns>X0_to_10__c</columns>
        <columns>X10_to_20__c</columns>
        <columns>X20_to_30__c</columns>
        <columns>X30_to_40__c</columns>
        <columns>X40_to_50__c</columns>
        <columns>X50_to_60__c</columns>
        <columns>X60_to_70__c</columns>
        <columns>X70_to_80__c</columns>
        <columns>X80_to_90__c</columns>
        <columns>X90_to_100__c</columns>
        <filterScope>Everything</filterScope>
        <label>Tier 1 Data</label>
    </listViews></CustomObject>